# BitReader

./: .gitignore  .travis.yml  CHANGES  CMakeLists.txt  INSTALL.md  README.md  appveyor.yml  library.properties  version_info.bat  version_info.h  version_info.nsh
ci/appveyor/: build_deploy_package.bat  install.bat  test_script.bat  win32arduino_install.bat  zip_me.bat
ci/travis/: arduino_build_sketch.sh
docs/: BitReader.xcf
examples/Benchmark/: Benchmark.ino
examples/WriteBits/: WriteBits.ino
src/: CMakeLists.txt  bitreader.cpp  bitreader.h
src/BitReader/: CMakeLists.txt  keywords.txt
src/BitReader/examples/Benchmark/: Benchmark.ino  results.txt
src/BitReader/examples/ReadBits/: ReadBits.ino
src/BitReader/examples/WriteBits/: WriteBits.ino
src/BitReader_unittest/: CMakeLists.txt  TestBitReader.cpp  main.cpp
test/: TestBitReader.cpp  TestBitReader.h  main.cpp
